# sunsensor_pose_estimation

./: CMakeLists.txt  LICENSE  README.md  package.xml
files/: toi.txt
launch/: test.launch  world.launch
msg/: angles.msg
spice_kernels/: earth_000101_200920_200630.bpc  metakernel  metakernelEarth
src/: inclinometer.cpp  poseEstimation.cpp  spicy.cpp  spicy_earth.cpp  ss.cpp  ss.py  sunPlugin.cpp  true_pose.cpp
src/archive/: sunsensor  testSunPlugin.cpp
tst/: CMakeLists.txt  unit_test.cpp
worlds/: contain_example.world
